; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/mgag200/extr_mgag200_i2c.c_mga_gpio_setsda.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/mgag200/extr_mgag200_i2c.c_mga_gpio_setsda.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mga_i2c_chan = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.mga_device* }
%struct.mga_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @mga_gpio_setsda to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mga_gpio_setsda(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mga_i2c_chan*, align 8
  %6 = alloca %struct.mga_device*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.mga_i2c_chan*
  store %struct.mga_i2c_chan* %8, %struct.mga_i2c_chan** %5, align 8
  %9 = load %struct.mga_i2c_chan*, %struct.mga_i2c_chan** %5, align 8
  %10 = getelementptr inbounds %struct.mga_i2c_chan, %struct.mga_i2c_chan* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load %struct.mga_device*, %struct.mga_device** %12, align 8
  store %struct.mga_device* %13, %struct.mga_device** %6, align 8
  %14 = load %struct.mga_device*, %struct.mga_device** %6, align 8
  %15 = load %struct.mga_i2c_chan*, %struct.mga_i2c_chan** %5, align 8
  %16 = getelementptr inbounds %struct.mga_i2c_chan, %struct.mga_i2c_chan* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @mga_i2c_set(%struct.mga_device* %14, i32 %17, i32 %18)
  ret void
}

declare dso_local i32 @mga_i2c_set(%struct.mga_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
